@@ -1,3 +1,6 @@
+2006-05-12  Alex Roitman  <shura@gramps-project.org>
+	* POTFILES.in: Add missing files.
+
 2006-05-10  Alex Roitman  <shura@gramps-project.org>
 	* POTFILES.in: Add new file.
 
