@@ -1,3 +1,6 @@
+2006-05-12  Alex Roitman  <shura@gramps-project.org>
+	* src/Filters/Makefile.am (pkgdata_PYTHON): Add new files.
+
 2006-05-11  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_PersonView.py: add additional fields, and build
 	filter
